--- a/templates/thoughts/_entry.twig
+++ b/templates/thoughts/_entry.twig
@@ -19,9 +19,9 @@
         </div>
     {% endif %}
 
-    {% if entry.summary %}
+    {% if entry.postSummary %}
         <div class="summary" style="font-size: 1.1rem; color: #666; margin: 1.5rem 0;">
-            {{ entry.summary }}
+            {{ entry.postSummary }}
         </div>
     {% endif %}
 
