--- a/templates/thoughts/index.twig
+++ b/templates/thoughts/index.twig
@@ -25,8 +25,8 @@
                         Published: {{ entry.postDate|date('F j, Y') }}
                     </div>
 
-                    {% if entry.summary %}
-                        <p>{{ entry.summary }}</p>
+                    {% if entry.postSummary %}
+                        <p>{{ entry.postSummary }}</p>
                     {% elseif entry.postBody %}
                         <p>{{ entry.postBody|length > 250 ? entry.postBody|slice(0, 250) ~ '...' : entry.postBody }}</p>
                     {% endif %}
